--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "name": "angular-gitter-mgsmnr",
+  "engines": {
+    "node": "10.x",
+    "npm": "6.x"
+   },
   "version": "0.0.0",
   "private": true,
   "dependencies": {
