--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "angular-gitter-mgsmnr",
   "engines": {
-    "node": "10.x",
+    "node": "10.0.0",
     "npm": "6.x"
    },
   "version": "0.0.0",
