--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "angular-gitter-mgsmnr",
   "engines": {
     "node": "10.0.0",
-    "npm": "6.x"
+    "npm": "5.6.0"
    },
   "version": "0.0.0",
   "private": true,
